--- a/Runtime/Unity.LibPNG.asmdef
+++ b/Runtime/Unity.LibPNG.asmdef
@@ -2,7 +2,8 @@
     "name": "Unity.LibPNG",
     "references": [
         "GUID:2346c8736372f684eb3e4829f920b7f2",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
