--- a/Runtime/Unity.LibPNG.asmdef
+++ b/Runtime/Unity.LibPNG.asmdef
@@ -3,7 +3,8 @@
     "references": [
         "GUID:2346c8736372f684eb3e4829f920b7f2",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:e0cd26848372d4e5c891c569017e11f1"
+        "GUID:e0cd26848372d4e5c891c569017e11f1",
+        "GUID:2665a8d13d1b3f18800f46e256720795"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
